# src/MicroweberPackages/Category/routes/admin.php
@@ -1,0 +1,17 @@
+<?php
+
+/*
+|--------------------------------------------------------------------------
+| Frontend Routes
+|--------------------------------------------------------------------------
+|
+*/
+
+Route::name('admin.')
+    ->prefix('admin')
+    ->namespace('\MicroweberPackages\Category\Http\Controllers\Admin')
+    ->group(function () {
+
+        Route::resource('categories', 'CategoriesController');
+
+    });
